syntax = "proto3";

package ru.expanse.quader.lib.api.proto;

option java_package = "ru.expanse.quader.lib.api.proto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";

service ShutDownService {
    rpc ShutDown(ShutDownRequest) returns (google.protobuf.Empty);
}

message ShutDownRequest {
    string operation_key = 1;
}